--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -3,7 +3,7 @@
     margin: 0px 12px 40px 25px;
 }
 
-.postImage{
+.postImg{
     width: 100%;
     height: 280px;
     object-fit: cover;
@@ -28,3 +28,17 @@
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
 }
+
+.postTitle {
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 15px;
+    cursor: pointer;
+  }
+  
+  .postDate {
+    font-style: italic;
+    font-size: 13px;
+    color: #999;
+    margin-top: 15px;
+  }
