--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -39,6 +39,12 @@
 .loginButton{
     margin-top: 10px;
 }
+
+.loginButton:disabled{
+    cursor: not-allowed;
+    background-color: rgb(252, 173, 173);
+  }
+
 .registerButton{
     margin-top: 10px;
 }
