--- a/client/src/pages/Settings/Settings.css
+++ b/client/src/pages/Settings/Settings.css
@@ -1,61 +1,82 @@
-.settings{
+.settings {
     display: flex;
-}
-
-.settingsWrapper{
-    flex:9;
+  }
+  
+  .settingsWrapper {
+    flex: 9;
     padding: 20px;
-    width: 450px;
-    margin-left: 750px;
-}
-
-.settingsTitle{
+  }
+  
+  .settingsTitle {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.settingsUpdateTitle{
+  }
+  
+  .settingsUpdateTitle {
     font-size: 30px;
     margin-bottom: 20px;
-    color:#41B883
-}
-
-.settingsDeleteTitle{
+    color: lightcoral;
+  }
+  
+  .settingsDeleteTitle {
+    color: red;
     font-size: 12px;
-    margin-bottom: 20px;
-    color:red;
     cursor: pointer;
-}
-
-.settingsForm{
+  }
+  
+  .settingsForm {
     display: flex;
     flex-direction: column;
-}
-
-.settingsPPF{
+  }
+  
+  .settingsPP {
     display: flex;
     align-items: center;
-    margin: 10px 0px;
-}
-
-.settingsPPF > img{
-    width:70px;
+    margin: 10px 0;
+  }
+  
+  .settingsPP > img {
+    width: 70px;
     height: 70px;
     border-radius: 20px;
     object-fit: cover;
-}
-
-.settingsForm > label{
+  }
+  
+  .settingsPPIcon {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: lightcoral;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+  
+  .settingsForm > label {
     font-size: 20px;
     margin-top: 20px;
-}
-
-.settingsForm > input{
-    color: grey;
-    margin: 10px 0px;
+  }
+  
+  .settingsForm > input {
+    color: gray;
+    margin: 10px 0;
     height: 30px;
-    border: 1px solid lightgray;
-    border-radius: 5px;
-}
-
+    border: none;
+    border-bottom: 1px solid lightgray;
+  }
+  
+  .settingsSubmit{
+      width: 150px;
+      align-self: center;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      background-color: teal;
+      padding: 10px;
+      margin-top: 20px;
+      cursor: pointer;
+  }
