--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -6,8 +6,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: rgb(115, 160, 12);
+    color: white;
     font-size: 80px;
+    background-color: rgb(35, 165, 35);
 }
 
 .headerImg{
