--- a/client/src/components/Navbar/NavBar.css
+++ b/client/src/components/Navbar/NavBar.css
@@ -1,8 +1,15 @@
 .topImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    cursor: pointer;
-  }
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
 
+.navbar-logo {
+  height: 80px;        
+  width: auto;
+  display: block;
+  border-radius: 50%;
+  object-fit: cover;
+}
