--- a/client/src/components/Posts/Posts.css
+++ b/client/src/components/Posts/Posts.css
@@ -1,6 +1,7 @@
 .posts{
-    flex: 9;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  align-items: start;
+  margin: 0;
+  grid-auto-flow: dense;
 }
