--- a/client/src/components/FeaturedPosts/FeaturedPosts.css
+++ b/client/src/components/FeaturedPosts/FeaturedPosts.css
@@ -32,7 +32,7 @@
   padding: 12px;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   background: linear-gradient(transparent, rgba(0,0,0,0.6));
   color: #fff;
 }
